picture error fixed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 class=""text-3xl font-bold underline>Odin Recipes</h1>  
     <img 
     class="Nasi Lemak Picture"
-    src="https://en.wikipedia.org/wiki/File:Nasi_Lemak_dengan_Chili_Nasi_Lemak_dan_Sotong_Pedas,_di_Penang_Summer_Restaurant.jpg"
+    src="https://upload.wikimedia.org/wikipedia/commons/5/55/Nasi_Lemak_dengan_Chili_Nasi_Lemak_dan_Sotong_Pedas%2C_di_Penang_Summer_Restaurant.jpg"
     alt="Coconut Rice in an Inverted Bowl Shape, on top of a Black Plate and by its side, a boiled egg (half portion), cucumber, ikan bilis, peanuts, squid with sambal, chilli" />
 
     <h2> Description</h2>
