fixing in progress of the small syntax error

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1 class=""text-3xl font-bold underline>Odin Recipes</h1>  
+    <h1 class="text-3xl font-bold underline">Odin Recipes</h1>  
     <img 
     class="Nasi Lemak Picture"
     src="https://upload.wikimedia.org/wikipedia/commons/5/55/Nasi_Lemak_dengan_Chili_Nasi_Lemak_dan_Sotong_Pedas%2C_di_Penang_Summer_Restaurant.jpg"
