added more margins m-4 to balance the look of the texts

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     </div> 
     
     <!--Description Goes Here-->    
-    <div class="mt-4">
+    <div class="m-4">
         <h2 class="text-2xl font-semibold"> Description</h2>
         <p>This is a classic nasi lemak look but the taste often differs as the aromatics used to cook the rice makes all the difference. My mom often adds lemon grass, ginger, garlic and pandan leaves to add more flavour to the rice. 
         The rice is the main star of the show, with the co-star being the sambal chilli that comes in all degrees of spice and sweetness. Its often made with balachan, which is dried shrimps.</p>
     
     <!--Ingredients Goes Here-->
-        <div class="mt-4">
+        <div class="m-4">
     <h3 class="text-2xl font-semibold">Ingredients</h3>
     <ul>
         <li>Basmatic Rice</li>
@@ -42,7 +42,7 @@
 
     <!--Steps Goes Here-->
 
-    <div class="mt-4">
+    <div class="m-4">
         <h4 class="text-2xl font-semibold">Steps</h4>
         <ol>
             <li>1. Soak the rice in water</li>
