fixed nav bar to w-auto for both small and large screens so that content stays nicely in the center instead of stacked on one side

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         bg-white
         "        
         >
-            <div class="place-items-center w-full md:flex md:items-center md:w-auto" id="menu">
+            <div class="place-items-center w-auto md:flex-wrap md:items-center md:w-auto" id="menu">
                 <ul class="
                 text-gray-700
                 pt-4                
