added bak kut teh content, changed menu item on bak kut teh to reflect nasi lemak to allow user to go back to original page

--- a/pages/bakkutteh.html
+++ b/pages/bakkutteh.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="src/output.css" rel="stylesheet">
+    <link href="../src/output.css" rel="stylesheet">
     <title>Bak Kut Teh</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
                 </li>
                 
                 <li>
-                    <a class="md:p-4 py-2 block hover:text-black" href="pages/bakkutteh.html">Bak Kut Teh</a>
+                    <a class="md:p-4 py-2 block hover:text-black" href="../index.html">Nasi Lemak</a>
                 </li>
 
                 <li>
